[package]
name = "bitwhaler"
version = "0.1.0"
authors = ["Rai Phairow <rai.phairow@pubnub.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
json = { version = "0.11.13" }
hyper = { version = "0.14.4" }