[package]
name = "bitwhaler"
version = "0.1.0"
authors = ["Rai Phairow <rai.phairow@pubnub.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
reqwest = { version = "0.11", features = ["json"] }
follow-redirects = { version = "0.1.3" }
urlencoding = { version="1" }
